feat(backend): author 537 one-line MCQ summaries
Migrate the entire backend section (34 modules) to the authored
**Short:** MCQ-summary line, following the llm and ml sections. Every
interview Q&A now carries a hand-written 15-220 char standalone
summary immediately under the question, replacing the derived
first-sentence fallback used by extract.py.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>